# grpc-bb

./: .gitignore  Makefile  README.md  buffer.proto  buffer_pb2.py  grpcbifbuffer.py  grpcbigbuffer.py  setup.py
block_builder/: .gitignore  Cargo.toml
block_builder/src/: lib.rs
pyo3_generator_test/: Cargo.toml  main.py
pyo3_generator_test/src/: block_builder.rs  lib.rs
src/: README.md  grpcbigbuffer.py
src/grpcbigbuffer/: Makefile  block_builder.py  block_driver.py  buffer.proto  buffer_pb2.py  celaut.proto  client.py  compile.proto  compile_pb2.py  disk_stream.py  grpcbigbuffer.py  reader.py  test.proto  test_pb2.py  utils.py  validate_lengths_tree.py
src/pee_rpc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: README.md  TestRealFilesystemCompileBuffer.py  analyze_protobuf_data.py  block_builder.py  block_driver.py  extract_protobuf_data.py  test.py
test/__block__/: 33323536  736861323536  73686133323536  736861353132
test/__cache__/grpcbigbuffer/107000491/: _.json
test/__cache__/grpcbigbuffer/108156637/: 2
test/__cache__/grpcbigbuffer/129199686/: 1  _.json
test/__cache__/grpcbigbuffer/156596353/: 1  2  _.json
test/__cache__/grpcbigbuffer/160112678/: 1
test/__cache__/grpcbigbuffer/166191436/: 1  _.json
test/__cache__/grpcbigbuffer/168250973/: 1  _.json
test/__cache__/grpcbigbuffer/170407079/: 1
test/__cache__/grpcbigbuffer/180376608/: 1
test/__cache__/grpcbigbuffer/187311937/: 1  _.json
test/__cache__/grpcbigbuffer/198506563/: _.json
test/__cache__/grpcbigbuffer/202365533/: 2
(+89 files in other folders)
